--- a/src/os2datascanner/projects/admin/import_services/templates/import_services/msgraph_oauth.html
+++ b/src/os2datascanner/projects/admin/import_services/templates/import_services/msgraph_oauth.html
@@ -28,10 +28,9 @@
           <p>
             <a href="{{ auth_endpoint }}"
                id="button-authenticate"
-               type="button"
-               class="button button--cta button--small btn btn-default">
-              {% trans "Continue to" %} {{ service_name }}
-            </a>
+               class="button button--cta-button btn"
+               aria-label="{% trans 'Continue to' %} {{ service_name }}"
+               title="{% trans 'Continue to' %} {{ service_name }}">{% trans "Continue to" %} {{ service_name }}</a>
           </p>
           <p>{% trans "You will be forwarded to the creation form after the service has issued the necessary rights." %}</p>
         {% else %}
