--- a/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/admin_widgets/rule_builder.html
@@ -15,7 +15,7 @@
           {% if hidden %}hidden{% endif %}
           data-selector="#select_slot"
           data-function="stringifyRule"
-          name="{{ widget.name|default:"rule" }}"
+          name="{{ widget.name|default:'rule' }}"
           readonly>{% if widget %}{{ widget.value }}{% else %}{}{% endif %}</textarea>
 
 <div id="__templates" style="display: none">
@@ -32,7 +32,7 @@
       <option value="CustomRule_Name">{% trans "names" %}</option>
       <option value="CustomRule_Address">{% trans "address" %}</option>
       <option value="EmailHeader">{% trans "e-mail header" %}</option>
-      <optgroup label="{% trans "Experimental" %}">
+      <optgroup label="{% trans 'Experimental' %}">
         <option value="TurboCPRRule">{% trans "CPR-nr. (Turbo)" %}</option>
         <option value="TurboHealthRule">{% trans "health information (Turbo)" %}</option>
         <option value="PassportRule">{% trans "passport" %}</option>
@@ -41,11 +41,11 @@
     <span class="empty"></span>
   </span>
   <span id="and_fragment" class="logical-rule">
-    <input class="destroyer" type="button" value="-">
+    <input class="destroyer button button--icon-button" type="button" value="-">
     {% trans "and" %} <span data-template="rule_selector"></span>
   </span>
   <span id="AndRule">
-    <input class="inserter"
+    <input class="inserter button button--icon-button"
            data-template-name="and_fragment"
            data-template-insert="before-sibling .target"
            type="button"
@@ -56,15 +56,16 @@
     <span class="target"></span>
   </span>
   <span id="or_fragment" class="logical-rule">
-    <input class="destroyer" type="button" value="-" />
+    <input class="destroyer button button--icon-button" type="button" value="-" />
     {% trans "or" %} <span data-template="rule_selector"></span>
   </span>
   <span id="OrRule">
-    <input class="inserter"
+    <input class="inserter button button--icon-button"
            data-template-name="or_fragment"
            data-template-insert="before-sibling .target"
            type="button"
-           value="+" />
+           value="+">
+    <input />
     <span class="logical-rule">
       <span data-template="rule_selector"></span>
     </span>
@@ -95,7 +96,7 @@
     )
   </span>
   <span id="RegexRule">
-    <input type="text" placeholder="{% trans "Regular expression" %}" />
+    <input type="text" placeholder="{% trans 'Regular expression' %}" />
   </span>
   <span id="CustomRule_Health"></span>
   <span id="CustomRule_Name">
@@ -108,7 +109,7 @@
   </span>
   <span id="CustomRule_Address"></span>
   <span id="EmailHeader">
-    <input type="text" placeholder="{% trans "field name" %}" />
+    <input type="text" placeholder="{% trans 'field name' %}" />
     <span class="logical-rule">
       {% trans "matches" context "verb" %}
       <span data-template="rule_selector"></span>
