--- a/src/os2datascanner/projects/admin/adminapp/templates/components/rules/customrule_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/rules/customrule_form.html
@@ -143,8 +143,14 @@
         </section>
 
         <div class="content-footer">
-          <div class="form__group last-btn">
-            <button type="submit" class="button button--cta" name="save">{% trans "Save changes" %}</button>
+          <div class="form__group">
+            <button type="submit"
+                    class="button button--cta-button"
+                    aria-label="{% trans 'Save changes' %}"
+                    title="{% trans 'Save changes' %}"
+                    name="save">
+              <span>{% trans "Save changes" %}</span>
+            </button>
           </div>
         </div>
       </form>
