--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/scan_status_table.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/scan_status_table.html
@@ -14,7 +14,7 @@
   {% endcomment %}
   <span name="status_table_poll"
         id="status_table_poll"
-        hx-get="{% url "status" %}"
+        hx-get="{% url 'status' %}"
         hx-target="{{ reload }}"
         hx-select="{{ reload }}"
         hx-swap="outerHTML"
@@ -100,12 +100,11 @@
                     {% csrf_token %}
                     {% trans "Do you really want to delete the status object for scanner '%(scanner_name)s'?" as r_u_sure %}
                     <button type="submit"
-                            class="button button--small button--grey"
+                            class="button button--icon-button"
                             onclick="return confirm(interpolate('{{ r_u_sure|escapejs }}', {'scanner_name': '{{ status.scanner.name|escapejs }}'}, true))"
-                            title="{% trans 'Delete' %}">
-                      <svg class="icon">
-                        <use xlink:href="/static/svg/symbol-defs.svg#icon-cross"></use>
-                      </svg>
+                            aria-label="{% trans 'Delete' %} {% trans 'status for running scanner' %}"
+                            title="{% trans 'Delete' %} {% trans 'status for running scanner' %}">
+                      <i id="delete_forever" class="material-icons">delete_forever</i>
                     </button>
                   </form>
                 </div>
