--- a/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/miniscan.html
@@ -64,18 +64,24 @@
           <p>
             <a href="#show-rules-modal"
                data-modal="modal:open"
-               class="button button"
-               title="{% trans 'Load rule' %}">{% trans "Load rule" %}</a>
+               class="button button--text-button"
+               aria-label="{% trans 'Upload a rule from the list' %}"
+               title="{% trans 'Upload a rule from the list' %}">{% trans "Load rule" %}</a>
           </p>
           <div id="ruleWidget">{% include "components/admin_widgets/rule_builder.html" with hidden=True %}</div>
-          <button id="run-miniscan-btn"
-                  class="button button--cta"
-                  type="submit"
-                  style="margin-top: 1em">{% trans "Run" %}</button>
-
-          <button onClick="window.location.reload();"
-                  class="button--clear"
-                  type="button">{% trans "Clear" %}</button>
+          <div class="button-group" style="margin-top: 1em">
+            <button type="submit"
+                    id="run-miniscan-btn"
+                    aria-label="{% trans 'Run' %} {% trans 'scanner' %}"
+                    title="{% trans 'Run' %} {% trans 'scanner' %}"
+                    class="button button--cta-button">{% trans "Run" %}</button>
+            <button type="button"
+                    class="button button--transparent-button"
+                    aria-label="{% trans 'Clear' %} {% trans 'content' %}"
+                    title="{% trans 'Clear' %} {% trans 'content' %}"
+                    onClick="window.location.reload();">{% trans "Clear" %}</button>
+          </div>
+ 
           <h3>{% trans "Scan result" %}</h3>
           <div id="response">{% trans "(none yet)" %}</div>
         </form>
