--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
@@ -172,56 +172,52 @@
                         </ul>
                       </td>
 
-                      <td class="datatable__column--dpos orgunit_managers">
-                        <ul>
-                          {% for dpo_pos in orgunit.dpos %}
-                            <li class="manager_li"
-                                title="{% trans "Click to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
-                                hx-post=""
-                                hx-swap="outerHTML"
-                                hx-target="#orgunit__{{ orgunit.pk }}"
-                                hx-select="#orgunit__{{ orgunit.pk }}"
-                                hx-trigger="click"
-                                hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-dpo": "{{ dpo_pos.account.uuid }}"}'
-                                hx-confirm="{% trans "Are you sure you want to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as DPO of" %} {{ orgunit }}?">
-                              <!-- Turning djlint off here, as it will otherwise insert unwanted whitespace -->
-                              <!-- djlint:off -->{{ dpo_pos.account.get_full_name }}</li><!-- djlint:on -->
-                            </li>
-                          {% endfor %}
-                          <li class="add_dpo">
-                            <button type="button" class="add_manager_button button button--small">
-                              <svg class="icon">
-                                <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
-                              </svg>
-                            </button>
-                            <select class="select_manager"
-                                    name="add-dpo"
-                                    hidden
-                                    hx-post=""
-                                    hx-swap="outerHTML"
-                                    hx-target="#orgunit__{{ orgunit.pk }}"
-                                    hx-select="#orgunit__{{ orgunit.pk }}"
-                                    hx-trigger="change"
-                                    hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
-                              <option value="">{% trans "Choose new DPO" %}</option>
-                              {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
-                            </select>
-                          </li>
-
-                        </ul>
-                      </td>
-                    </tr>
-                  {% endfor %}
-                {% else %}
-                  <tr>
-                    <td class="no_units" colspan="4">{% trans "No organizational units found ..." %}</td>
-                  </tr>
-                {% endif %}
-              </tbody>
-              {% include "components/pagination/pagination.html" %}
-            </table>
-          </div>
-        {% else %}
-          <div class="root">{% trans "No organizational units." %}</div>
-        {% endif %}
-      {% endblock %}
+                <td class="datatable__column--dpos orgunit_managers">
+                  <ul>
+                    {% for dpo_pos in orgunit.dpos %}
+                      <li class="dynamic_li"
+                          title="{% trans "Click to remove" %} {{ dpo_pos.account.get_full_name }} {% trans "as manager of" %} {{ orgunit }}."
+                          hx-post=""
+                          hx-swap="outerHTML"
+                          hx-target="#orgunit__{{ orgunit.pk }}"
+                          hx-select="#orgunit__{{ orgunit.pk }}"
+                          hx-trigger="click"
+                          hx-vals='{"orgunit": "{{ orgunit.pk }}", "rem-dpo": "{{ dpo_pos.account.uuid }}"}'
+                          hx-confirm="{% trans 'Are you sure you want to remove' %} {{ dpo_pos.account.get_full_name }} {% trans 'as DPO of' %} {{ orgunit }}?">
+                        {{ dpo_pos.account.get_full_name }}
+                      </li>
+                    {% endfor %}
+                    <li class="add_dpo">
+                      <button type="button" class="add_manager_button button button--icon-button">
+                        <i id="person_add_alt_1" class="material-icons">person_add_alt_1</i>
+                      </button>
+                      <select class="select_options"
+                              name="add-dpo"
+                              hidden
+                              hx-post=""
+                              hx-swap="outerHTML"
+                              hx-target="#orgunit__{{ orgunit.pk }}"
+                              hx-select="#orgunit__{{ orgunit.pk }}"
+                              hx-trigger="change"
+                              hx-vals='{"orgunit": "{{ orgunit.pk }}"}'>
+                        <option value="">{% trans "Choose new DPO" %}</option>
+                        {% for account in accounts %}<option value="{{ account.uuid }}">{{ account.get_full_name }}</option>{% endfor %}
+                      </select>
+                    </li>
+                  </ul>
+                </td>
+              </tr>
+            {% endfor %}
+          {% else %}
+            <tr>
+              <td class="no_units" colspan="4">{% trans "No organizational units found ..." %}</td>
+            </tr>
+          {% endif %}
+        </tbody>
+        {% include "components/pagination/pagination.html" %}
+      </table>
+    </div>
+  {% else %}
+    <div class="root">{% trans "No organizational units." %}</div>
+  {% endif %}
+{% endblock %}
