--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match_table.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match_table.html
@@ -27,15 +27,18 @@
       </colgroup>
       <thead>
         <tr class="table-topbar topbar-stick sticky">
-          <th colspan="{% if "/archive" in request.path %}8{% else %}7{% endif %}">
+          <th colspan="{% if '/archive' in request.path %}8{% else %}7{% endif %}">
             {% include "components/reports/handle_match.html" %}
             <div class="view-options">
-              <button class="toggle probability-toggle" type="button" aria-pressed="false">
+              <button type="button" class="toggle probability-toggle" aria-pressed="false">
                 {% trans 'Show match probability' %}
               </button>
-              <button class="matches-expand-all button button-caret button--has-icon"
-                      type="button">
-                {% trans "Show/hide all matches" %} <i class="material-icons" aria-hidden="true">expand_more</i>
+              <button type="button"
+                      class="matches-expand-all button button--caret-button button--icon-text-button"
+                      aria-label="{% trans 'Show/hide all matches' %}"
+                      title="{% trans 'Show/hide all matches' %}">
+                <span>{% trans "Show/hide all matches" %}</span>
+                <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
               </button>
             </div>
           </th>
@@ -44,64 +47,81 @@
           <th class="datatable__column--checkbox">
             <div class="ds-checkbox">
               <input id="select-all" type="checkbox">
-              <label for="select-all">
-                <span class="screen-reader-only">{% trans 'Select all results' %}</span>
-              </label>
+              <label for="select-all"
+                     aria-label="{% trans 'Select all results' %}"
+                     title="{% trans 'Select all results' %}"></label>
             </div>
           </th>
           <th class="datatable__column--name">{% trans "Name" %}</th>
 
           <th class="datatable__column--matchcount">
-            <label for="matches-caret">
-              <span>{% trans "Matches" %}</span>
-            </label>
-            <button type="button"
-                    name="number_of_matches"
-                    id="matches-caret"
-                    class="order-by button button-caret button--has-icon{% if order_by == 'number_of_matches' and order == 'descending' %} up{% endif %}"
-                    value="{% if order_by == 'number_of_matches' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-              <i class="material-icons" aria-hidden="true">expand_more</i>
-            </button>
+            <div class="th-flex-container">
+              <label for="matches-caret">
+                <span>{% trans "Matches" %}</span>
+              </label>
+              <button type="button"
+                      name="number_of_matches"
+                      aria-label="{% trans 'Sort table by' %} {% trans 'Matches'|lower %}"
+                      title="{% trans 'Sort table by' %} {% trans 'Matches'|lower %}"
+                      id="matches-caret"
+                      class="order-by button button--caret-button{% if order_by == 'number_of_matches' and order == 'descending' %} up{% endif %}"
+                      value="{% if order_by == 'number_of_matches' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+              </button>
+            </div>
           </th>
           <th class="datatable__column--datasource_last_modified">
-            <label for="datasource_last_modified-caret">
-              <span>{% trans "Resource age" %}</span>
-            </label>
-            <button type="button"
-                    name="datasource_last_modified"
-                    id="datasource_last_modified-caret"
-                    class="order-by button button-caret button--has-icon{% if order_by == 'datasource_last_modified' and order == 'ascending' %} up{% endif %}"
-                    value="{% if order_by == 'datasource_last_modified' and order == 'ascending' %}descending{% else %}ascending{% endif %}">
-              <i class="material-icons" aria-hidden="true">expand_more</i>
-            </button>
+            <div class="th-flex-container">
+              <label for="datasource_last_modified-caret">
+                <span>{% trans "Resource age" %}</span>
+              </label>
+              <button type="button"
+                      name="datasource_last_modified"
+                      aria-label="{% trans 'Sort table by' %} {% trans 'Resource age'|lower %}"
+                      title="{% trans 'Sort table by' %} {% trans 'Resource age'|lower %}"
+                      id="datasource_last_modified-caret"
+                      class="order-by button button--caret-button{% if order_by == 'datasource_last_modified' and order == 'ascending' %} up{% endif %}"
+                      value="{% if order_by == 'datasource_last_modified' and order == 'ascending' %}descending{% else %}ascending{% endif %}">
+                <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+              </button>
+            </div>
           </th>
           <th class="datatable__column--source">{% trans "Source" %}</th>
           <th class="datatable__column--path">
-            <label for="path-caret">{% trans "Path" %}</label>
-            {% comment %}We use a click event handler on this button to
-            submit the <form> defined in filters.html{% endcomment %}
-
-            <button type="button"
-                    name="sort_key"
-                    id="path-caret"
-                    class="order-by button button-caret button--has-icon{% if order_by == 'sort_key' and order == 'descending' %} up{% endif %}"
-                    value="{% if order_by == 'sort_key' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-              <i class="material-icons" aria-hidden="true">expand_more</i>
-            </button>
+            <div class="th-flex-container">
+              <label for="path-caret">{% trans "Path" %}</label>
+              {% comment %}We use a click event handler on this button to
+              submit the <form> defined in filters.html{% endcomment %}
+              <button type="button"
+                      name="sort_key"
+                      aria-label="{% trans 'Sort table by' %} {% trans 'Path'|lower %} {% trans 'name'|lower %}"
+                      title="{% trans 'Sort table by' %} {% trans 'Path'|lower %} {% trans 'name'|lower %}"
+                      id="path-caret"
+                      class="order-by button button--caret-button{% if order_by == 'sort_key' and order == 'descending' %} up{% endif %}"
+                      value="{% if order_by == 'sort_key' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+              </button>
+            </div>
           </th>
           {% if "/archive/" in request.path %}
             <th class="datatable__column--shortinfo">
-              {% trans "Status" %}
-              <button type="button"
-                      name="resolution_status"
-                      class="order-by button button-caret button--has-icon{% if order_by == 'resolution_status' and order == 'descending' %} up{% endif %}"
-                      value="{% if order_by == 'resolution_status' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-                <i class="material-icons" aria-hidden="true">expand_more</i>
-              </button>
+              <div class="th-flex-container">
+                <label for="status-caret">{% trans "Status" %}</label>
+                <button type="button"
+                        name="resolution_status"
+                        aria-label="{% trans 'Sort table by' %} {% trans 'Status'|lower %}"
+                        title="{% trans 'Sort table by' %} {% trans 'Status'|lower %}"
+                        id="status-caret"
+                        class="order-by button button--caret-button{% if order_by == 'resolution_status' and order == 'descending' %} up{% endif %}"
+                        value="{% if order_by == 'resolution_status' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                  <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+                </button>
+              </div>
+
             </th>
           {% endif %}
           <th class="datatable__column--actions">
-            <span class="screen-reader-only">{% trans "Actions" %}</span>
+            <span aria-label="{% trans 'Actions' %}" title="{% trans 'Actions' %}">{% trans 'Actions' %}</span>
           </th>
         </tr>
       </thead>
