--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/leader_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/leader_statistics_template.html
@@ -74,68 +74,75 @@
         <thead>
           <tr class="table-topbar topbar-stick sticky">
             <th class="datatable__column--name">
-              <label for="name-caret">{% trans "Employee" %}</label>
-              <button type="button"
-                      name="first_name"
-                      id="name-caret"
-                      class="order-by button button-caret button--has-icon {% if order_by == 'first_name' and order == 'descending' %}up{% endif %}"
-                      value="{% if order_by == 'first_name' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-                <i class="material-icons" aria-hidden="true">expand_more</i>
-              </button>
+              <div class="th-flex-container">
+                <label for="name-caret">{% trans "Employee" %}</label>
+                <button type="button"
+                        name="first_name"
+                        id="name-caret"
+                        class="order-by button button--caret-button {% if order_by == 'first_name' and order == 'descending' %}up{% endif %}"
+                        value="{% if order_by == 'first_name' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                  <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+                </button>
+              </div>
             </th>
             <th class="datatable__column--matchcount">
-              <label for="matches-caret">
-                <span>{% trans "Matches" %}</span>
-              </label>
-              <button type="button"
-                      name="match_count"
-                      id="matches-caret"
-                      class="order-by button button-caret button--has-icon{% if order_by == 'match_count' and order == 'descending' %} up{% endif %}"
-                      value="{% if order_by == 'match_count' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-                <i class="material-icons" aria-hidden="true">expand_more</i>
-              </button>
+              <div class="th-flex-container">
+                <label for="matches-caret">
+                  <span>{% trans "Matches" %}</span>
+                </label>
+                <button type="button"
+                        name="match_count"
+                        id="matches-caret"
+                        class="order-by button button--caret-button {% if order_by == 'match_count' and order == 'descending' %}up{% endif %}"
+                        value="{% if order_by == 'match_count' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                  <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+                </button>
+              </div>
             </th>
             <th class="datatable__column--matchstatus">
-              <label for="status-caret">
-                {% trans "Status" %} <span class="help-tooltip"
-       title="{% trans "The status of each user is determined by how many matches that user has, and how often they have handled their matches recently. A user with a “Completed” status has no matches. A user with a “Accepted” status has handled at least 75% of their recent matches." %}">
-                {% include "components/svg-icons/help.svg" %}
-              </span>
-            </label>
-            <button type="button"
-                    name="match_status"
-                    id="status-caret"
-                    class="order-by button button-caret button--has-icon{% if order_by == 'match_status' and order == 'descending' %} up{% endif %}"
-                    value="{% if order_by == 'match_status' and order == 'descending' %}ascending{% else %}descending{% endif %}">
-              <i class="material-icons" aria-hidden="true">expand_more</i>
-            </button>
-          </th>
-          <th class="datatable__column--leader-actions">
-            <span class="screen-reader-only">{% trans "Actions" %}</span>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        {% if employees %}
-          {% for employee in employees %}
-            <tr class="soft-load"
-                hx-get="{% url 'employee' employee.uuid %}"
-                hx-swap="outerHTML swap:200ms"
-                hx-target="this"
-                hx-trigger="revealed"
-                hx-push-url="false">
-              <td colspan="4" class="loading">{% trans "Loading employee ..." %}</td>
-            </tr>
-          {% endfor %}
-        {% else %}
-          <tr>
-            <td class="datatable__column--nodata" colspan="6">{% trans "No employees found." %}</td>
+              <div class="th-flex-container">
+                <label for="status-caret">
+                  {% trans "Status" %}
+                  <span class="help-tooltip"
+                        title="{% trans 'The status of each user is determined by how many matches that user has, and how often they have handled their matches recently. A user with a “Completed” status has no matches. A user with a “Accepted” status has handled at least 75% of their recent matches.' %}">
+                    {% include "components/svg-icons/help.svg" %}
+                  </span>
+                </label>
+                <button type="button"
+                        name="match_status"
+                        id="status-caret"
+                        class="order-by button button--caret-button {% if order_by == 'match_status' and order == 'descending' %}up{% endif %}"
+                        value="{% if order_by == 'match_status' and order == 'descending' %}ascending{% else %}descending{% endif %}">
+                  <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
+                </button>
+              </div>
+            </th>
+            <th class="datatable__column--leader-actions">
+              <span aria-label="{% trans 'Actions' %}" title="{% trans 'Actions' %}">{% trans "Actions" %}</span>
+            </th>
           </tr>
-        {% endif %}
-      </tbody>
-    </table>
-  </div>
-{% else %}
-  {% include "error_pages/no-units-error.html" %}
-{% endif %}
+        </thead>
+        <tbody>
+          {% if employees %}
+            {% for employee in employees %}
+              <tr class="soft-load"
+                  hx-get="{% url 'employee' employee.uuid %}"
+                  hx-swap="outerHTML swap:200ms"
+                  hx-target="this"
+                  hx-trigger="revealed"
+                  hx-push-url="false">
+                <td colspan="4" class="loading">{% trans "Loading employee ..." %}</td>
+              </tr>
+            {% endfor %}
+          {% else %}
+            <tr>
+              <td class="datatable__column--nodata" colspan="6">{% trans "No employees found." %}</td>
+            </tr>
+          {% endif %}
+        </tbody>
+      </table>
+    </div>
+  {% else %}
+    {% include "error_pages/no-units-error.html" %}
+  {% endif %}
 </div>
