--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/user_overview_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/user_overview_template.html
@@ -21,34 +21,34 @@
                   <td>
                     <span class="weeknum">{% trans "Week" %} {{ matches_by_week.2.weeknum }}</span>
                     <div class="matches"
-                         aria-label="{% trans "Unhandled matches at the end of week" %} {{ matches_by_week.2.weeknum }}">
+                         aria-label="{% trans 'Unhandled matches at the end of week' %} {{ matches_by_week.2.weeknum }}">
                       {{ matches_by_week.2.matches }}
                       <span class="annotation new {% if matches_by_week.2.new == 0 %}zero{% endif %}"
-                            aria-label="{% trans "New matches during week" %} {{ matches_by_week.2.weeknum }}">{{ matches_by_week.2.new }}</span>
+                            aria-label="{% trans 'New matches during week' %} {{ matches_by_week.2.weeknum }}">{{ matches_by_week.2.new }}</span>
                       <span class="annotation handled {% if matches_by_week.2.handled == 0 %}zero{% endif %}"
-                            aria-label="{% trans "Matches handled during week" %} {{ matches_by_week.2.weeknum }}">{{ matches_by_week.2.handled }}</span>
+                            aria-label="{% trans 'Matches handled during week' %} {{ matches_by_week.2.weeknum }}">{{ matches_by_week.2.handled }}</span>
                     </div>
                   </td>
                   <td>
                     <span class="weeknum">{% trans "Week" %} {{ matches_by_week.1.weeknum }}</span>
                     <div class="matches"
-                         aria-label="{% trans "Unhandled matches at the end of week" %} {{ matches_by_week.1.weeknum }}">
+                         aria-label="{% trans 'Unhandled matches at the end of week' %} {{ matches_by_week.1.weeknum }}">
                       {{ matches_by_week.1.matches }}
                       <span class="annotation new {% if matches_by_week.1.new == 0 %}zero{% endif %}"
-                            aria-label="{% trans "New matches during week" %} {{ matches_by_week.1.weeknum }}">{{ matches_by_week.1.new }}</span>
+                            aria-label="{% trans 'New matches during week' %} {{ matches_by_week.1.weeknum }}">{{ matches_by_week.1.new }}</span>
                       <span class="annotation handled {% if matches_by_week.1.handled == 0 %}zero{% endif %}"
-                            aria-label="{% trans "Matches handled during week" %} {{ matches_by_week.1.weeknum }}">{{ matches_by_week.1.handled }}</span>
+                            aria-label="{% trans 'Matches handled during week' %} {{ matches_by_week.1.weeknum }}">{{ matches_by_week.1.handled }}</span>
                     </div>
                   </td>
                   <td>
                     <span class="weeknum">{% trans "Week" %} {{ matches_by_week.0.weeknum }}</span>
                     <div class="matches"
-                         aria-label="{% trans "Unhandled matches at the end of week" %} {{ matches_by_week.0.weeknum }}">
+                         aria-label="{% trans 'Unhandled matches at the end of week' %} {{ matches_by_week.0.weeknum }}">
                       {{ matches_by_week.0.matches }}
                       <span class="annotation new {% if matches_by_week.0.new == 0 %}zero{% endif %}"
-                            aria-label="{% trans "New matches during week" %} {{ matches_by_week.0.weeknum }}">{{ matches_by_week.0.new }}</span>
+                            aria-label="{% trans 'New matches during week' %} {{ matches_by_week.0.weeknum }}">{{ matches_by_week.0.new }}</span>
                       <span class="annotation handled {% if matches_by_week.0.handled == 0 %}zero{% endif %}"
-                            aria-label="{% trans "Matches handled during week" %} {{ matches_by_week.0.weeknum }}">{{ matches_by_week.0.handled }}</span>
+                            aria-label="{% trans 'Matches handled during week' %} {{ matches_by_week.0.weeknum }}">{{ matches_by_week.0.handled }}</span>
                     </div>
                   </td>
                 </tr>
@@ -64,14 +64,16 @@
                 {% for scannerjob in scannerjobs %}
                   <li id="scannerjob-li__{{ scannerjob.scanner_job_pk|unlocalize }}">
                     <button type="button"
-                            class="button"
+                            class="button button--icon-button"
                             name="delete_from_scannerjob"
-                            hx-post="{% url "statistics-user-id" account.uuid %}"
+                            aria-label="{% trans 'Delete' %} {% trans 'results' %} fra &quot;{{ scannerjob.scanner_job_name }}&quot;"
+                            title="{% trans 'Delete' %} {% trans 'results' %} fra &quot;{{ scannerjob.scanner_job_name }}&quot;"
+                            hx-post="{% url 'statistics-user-id' account.uuid %}"
                             hx-trigger="click"
                             hx-target="#scannerjob-li__{{ scannerjob.scanner_job_pk|unlocalize }}"
                             hx-swap="outerHTML"
                             hx-vals='{"pk": "{{ scannerjob.scanner_job_pk }}", "name": "{{ scannerjob.scanner_job_name }}"}'
-                            hx-confirm="{% trans "You are about to delete all results from the scannerjob" %} &quot;{{ scannerjob.scanner_job_name }}&quot; {% trans "associated with the user" %} &quot;{{ account.get_full_name }}&quot; ({% trans "Username" %}: &quot;{{ account.username }}&quot;). {% trans "Are you sure? This action cannot be reversed." %}">
+                            hx-confirm="{% trans 'You are about to delete all results from the scannerjob' %} &quot;{{ scannerjob.scanner_job_name }}&quot; {% trans 'associated with the user' %} &quot;{{ account.get_full_name }}&quot; ({% trans Username %}: &quot;{{ account.username }}&quot;). {% trans 'Are you sure? This action cannot be reversed.' %}">
                       <i class="material-icons">delete_forever</i>
                     </button>
                     {{ scannerjob.scanner_job_name }}: {{ scannerjob.total }}
@@ -88,7 +90,9 @@
             <h2 class="page-title__sub">{% trans "Development chart" %}</h2>
           </div>
         </div>
-        <div class="chart_container" data-chartid="development-all-matches" aria-label="{% trans "Chart of the change in the amount of the user's unhandled matches over the past year on a weekly basis." %}">
+        <div class="chart_container"
+          data-chartid="development-all-matches"
+          aria-label="{% trans "Chart of the change in the amount of the user's unhandled matches over the past year on a weekly basis." %}">
           <canvas class="line_chart"
                   id="line_chart_all_matches_development__{{ account.uuid }}"></canvas>
         </div>
