--- a/src/os2datascanner/projects/report/reportapp/templates/content.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/content.html
@@ -26,7 +26,7 @@
         <div class="search_field_wrapper wide">
           <input type="search"
                  id="search-bar"
-                 placeholder="{% trans "Search Scannerjob" %}">
+                 placeholder="{% trans 'Search Scannerjob' %}">
         </div>
       {% endif %}
       <select id="distribute-to" name="distribute-to" multiple>
@@ -35,17 +35,22 @@
           <option value="{{ scan.scanner_job_pk|unlocalize }}">{{ scan.scanner_job_name }} ({{ scan.total }})</option>
         {% endfor %}
       </select>
-      <button class="button button--cta"
+      <button type="button"
+              class="button button--cta-button"
               id="distribute-matches"
               name="distribute-matches"
+              aria-label="{% trans 'Distribute' %} {% trans 'matches' %}"
+              title="{% trans 'Distribute' %} {% trans 'matches' %}"
               disabled
-              hx-confirm="{% trans "Are you sure you want to distribute matches to the users? This action cannot be reverted." %}"
+              hx-confirm="{% trans 'Are you sure you want to distribute matches to the users? This action cannot be reverted.' %}"
               hx-target="this"
               hx-trigger="click"
               hx-swap="afterend"
-              hx-post="{% url "distribute" %}"
+              hx-post="{% url 'distribute' %}"
               hx-include="[name='distribute-to']"
-              hx-push-url="false">{% trans "Distribute" %}</button>
+              hx-push-url="false">
+        <span>{% trans "Distribute" %}</span>
+      </button>
     </div>
   {% endif %}
 </div>
